--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://api.fonts.coollabs.io/css2?family=Quicksand&display=swap');
 
 body {
+    background-color: rgb(56, 77, 72);
     margin: 0;
     padding: 0;
     display: flex;
@@ -13,6 +14,6 @@ body {
 }
 
 h1 {
-    color: darkred;
+    color: rgb(76, 39, 25);
     font-family: "Quicksand";
 }
