--- a/style.css
+++ b/style.css
@@ -1,108 +1,155 @@
-@import url('https://api.fonts.coollabs.io/css2?family=Quicksand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Proxima+Nova');
 
 body {
-    background-color: rgb(51, 51, 51);
-    margin: 0;
-    padding: 0;
+    display: grid;
+    height: 100vh;
+    grid-template-rows: auto 1fr auto;
+    margin: 0%;
 }
 
-.container {
+header {
+    background-color: #111212;
+}
+
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("WebsiteImages/EngineRoomBanner.png");
+    height: 100%;
+
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     position: relative;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.hero-text {
+    font-family: roboto;
+    font-size: 2vw;
+    line-height: 20px;
     text-align: center;
-    color: white;
+    position: relative;
+    padding-top: 4%;
+    padding-bottom: 8%;
+    color: #f1c491;
 }
 
-html {
-    overflow-y: hidden;
-    overflow-x: hidden;
+.hero-button {
+    font-family: roboto;
+    font-size: 2vw;
+    background-color: rgb(245, 218, 119);
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 0;
+    border-radius: 10px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: 0.3s;
 }
 
-.centered {
-    position: absolute;
-    top: 32%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: xx-large;
-    font-family: Quicksand;
+.hero-button:hover {
+    background-color: rgb(207, 172, 57);
+    box-shadow: 0 12px 16px 0 rgb(0, 0, 0), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+    transition: 0.3;
 }
 
-.centeredLow {
-    position: absolute;
-    top: 37%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: large;
-    font-family: Quicksand;
+.warning {
+    padding-top: 10px;
+    font-size: 10px;
+    font-style: italic;
+    color: grey;
 }
 
-.DownArrow {
-    position: absolute;
-    top: 44%;
-    left: 50%;
-    width: 5%;
-    transform: translate(-50%, -50%);
+
+.HomepageTitle {
+    font-family: Roboto;
+    font-size: larger;
+    color: #ffffff;
 }
 
-.MainImage {
-    min-height: 100vh
+main {
+    background-color: #232424;
 }
 
-.Header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 10%;
+.path-boxes {
+    display: grid;
+    font-size: 20px;
+    height: 60vh;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
+    margin: 5%;
 }
 
-li,
-a,
-button {
-    text-underline-offset: 7px;
-    font-family: "inter";
-    font-weight: 500;
-    font-size: 16px;
-    color: aliceblue;
+.left-box {
+    background-color: #141515;
+    text-align: center;
+    font-family: roboto;
+    color: #d3d3d3;
+    border-radius: 20px;
+    outline: 15px solid #0d0e0e;
+    border-radius: 20px;
 }
 
-.logo {
-    cursor: pointer;
-    margin-right: auto;
+.center-box {
+    background-color: #141515;
+    text-align: center;
+    font-family: roboto;
+    color: #d3d3d3;
+    border-radius: 20px;
+    outline: 15px solid #0d0e0e;
+    border-radius: 20px;
 }
 
-.logo_text {
-    font-family: "inter";
-    color: rgb(255, 255, 255);
-    margin-right: 39%;
+.right-box {
+    background-color: #141515;
+    text-align: center;
+    font-family: roboto;
+    color: #d3d3d3;
+    border-radius: 20px;
+    outline: 15px solid #0d0e0e;
+    border-radius: 20px;
 }
 
-.nav_links {
-    list-style: none;
+.path-image {
+    justify-content: center;
+    border-radius: 14px;
 }
 
-.nav_links li {
-    display: inline-block;
-    padding: 0px 13px;
+.box-button {
+    background-color: rgb(96, 94, 85);
+    color: #d3d3d3;
+    border-width: 0;
+    justify-content: center;
+    width: 50%;
+    height: 35px;
+    margin-top: 2px;
+    border-radius: 100px;
+    font-family: roboto;
 }
 
-.nav_links li a {
-    transition: all 0.3s ease 0s;
+.box-button:hover {
+    background-color: rgb(42, 41, 37);
+    color: #5b5a5a;
+    transition: 0.15s;
 }
 
-.nav_links li a:hover {
-    color: #0088a9;
+.dashed {
+    border: 0;
+    border-top: 3px solid #2c3030;
+    justify-content: center;
+    margin: 20px;
 }
 
-button {
-    margin-left: 50px;
-    padding: 9px 25px;
-    background-color: rgba(0, 136, 169, 1);
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
+footer {
+    background-color: #111212;
 }
 
-button:hover {
-    background-color: rgba(0, 136, 169, 0.8);
+.welcome-box {
+    text-align: center;
+    font-family: roboto;
+    font-size: 20px;
+    padding: 20px;
+    line-height: 30px;
+    color: #d3d3d3;
+    background-color: #282929;
+
 }
